# evcc-dashboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  install.sh
.github/workflows/: release.yml
migrations/: 001_init.sql
src/: config.rs  main.rs  model.rs  tasks.rs
src/db/: downsample.rs  insert.rs  mod.rs  query.rs
src/mqtt/: mod.rs  parser.rs  subscriber.rs
src/web/: middleware.rs  mod.rs  state.rs
src/web/routes/: charts.rs  dashboard.rs  health.rs  login.rs  mobile.rs  mod.rs  partials.rs  settings.rs
static/css/: app.css
static/js/: charts.js
templates/: base.html  dashboard.html  history.html  login.html  settings.html
templates/partials/: battery_status.html  energy_flow.html  loadpoints.html  summary_stats.html  today_energy.html
